noticed bug with logo on mobile view, it as not sitting centered. Details and resolution added to TESTING.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,10 @@ footer {
 
 @media screen and (max-width: 768px) {
 
+    .navbar-brand {
+        padding-left: 50px;
+    }
+
     .about-us-info {
         margin-top: 30px;
     }
